[package]
name = "sql_parser"
version = "0.1.0"
edition = "2021"
description = "The sql_parser project provides a custom Rust parser for SQL-like queries, implemented using the Pest crate. It can parse SELECT statements with advanced query capabilities, including joins, conditional filtering, aggregate functions, grouping, ordering, and limiting the results."

[dependencies]
anyhow = "1.0.93"
pest = "2.7.14"
pest_derive = "2.7.14"
thiserror = "2.0.3"